# sovnd-project

./: .gitignore  APPENDIX.md  ARCHITECTURE.md  README.md  c.py  code.md  coursework.md  demo  demo.py  demo.sh  pyproject.toml  requirements.txt
apps/: agent.py  dashboard.py  demo.py  server.py
core/: __init__.py  config.py
core/detection/: __init__.py  signature.py  statistical.py
core/graph/: __init__.py  builder.py
core/metrics/: __init__.py  engine.py
core/scoring/: __init__.py  engine.py
deploy/: Dockerfile  docker-compose.yml
docs/uml/: README.md  fig-3-1-logical.puml  fig-3-2-sequence.puml  fig-3-3-deployment.puml  fig-3-4-usecase.puml
drivers/: __init__.py
drivers/ebpf/: Makefile  __init__.py  bridge.py  tracer.skel.h
drivers/ebpf/include/: maps.bpf.h
drivers/ebpf/loader/: loader.c
drivers/ebpf/src/: fd_tracker.bpf.c  filter.bpf.c  tracer.bpf.c
ebpf/: Makefile  fd_tracker.bpf.c  filter.bpf.c  maps.bpf.h  tracer.bpf.c  tracer.skel.h
internal/container/: __init__.py  resolver.py
internal/storage/: __init__.py  sqlite.py
scripts/: attack.sh  codegen.py  train.py  validate_performance.py
src/: ebpf_agent.py  main_agent.py
src/api/: main.py
src/dashboard/: app.py
src/detector/: signature.py  statistical.py
src/docker/: resolver.py
src/graph/: builder.py
src/metrics/: engine.py
src/scoring/: engine.py
src/storage/: sqlite.py
static/: index.html
tests/: conftest.py  test_api_main.py  test_build.py  test_container_resolver.py  test_ebpf_agent.py  test_event_structure.py  test_integration.py  test_loader.py  test_maps.py  test_metrics_engine.py  test_provenance_graph.py  test_scoring_engine.py  test_signature_detector.py  test_statistical_detector.py  test_storage_sqlite.py  test_tracepoints.py
tests/integration/: test_api_main.py  test_build.py  test_ebpf_agent.py  test_integration.py  test_loader.py  test_tracepoints.py
tests/unit/: test_container_resolver.py  test_event_structure.py  test_maps.py  test_metrics_engine.py  test_provenance_graph.py  test_scoring_engine.py  test_signature_detector.py  test_statistical_detector.py  test_storage_sqlite.py
web/: index.html
